Tried to fix the overflow issue

--- a/Bundle.css
+++ b/Bundle.css
@@ -30,8 +30,25 @@ code {
 #modal-embed-wrapper > div {
   padding-top: min(60vh, 500px) !important;
 }
+.MuiBox-root #modal-embed-wrapper {
+  height: 60vh;
+}
+.MuiBox-root #modal-embed-wrapper > div {
+  height: 100%;
+}
+.MuiBox-root #modal-embed-wrapper iframe {
+  position: relative !important;
+}
+.MuiBox-root #modal-embed-wrapper > span > div {
+  padding-top: 0 !important;
+  height: 100% !important;
+  overflow-y: hidden;
+}
 #modal-buttons-wrapper {
   display: flex;
+}
+.MuiBox-root {
+  overflow: auto;
 }
 
 /* src/App.css */
@@ -1208,7 +1225,7 @@ footer a:hover {
 }
 #issu-archive > div:not(.MuiPaper-root):not(.horizontal-divider-red) {
   position: relative;
-  padding-top: max(60%, 326px);
+  padding-top: max(50%, 326px);
   height: 0;
   width: 100%;
 }
